--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>1.6.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 </project>
